# ms-ai

./: README.md  pyproject.toml  requirements.txt
src/arroz/: main.py
