[project]
name = "arroz"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kaubarros-24", email = "martinsbarroskaua@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.4",
    "torch>=2.5.1",
    "tensorflow>=2.18.0",
    "huggingface-hub>=0.26.2",
    "huggingface>=0.0.1",
    "uvicorn>=0.32.0",
    "transformers>=4.46.2",
    "tf-keras>=2.18.0",
    "gradio>=5.5.0",
    "huggingface-hub",
    "tf-keras",
    "tensorflow",
    "huggingface",
    "torch",
    "transformers",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
fast = "uvicorn src.arroz.main:app --port 8080"
